...
    private var denyBlock: () -> () = { }

    lazy var denyButton: PrivacyPolicyButton = {
        let denyButton = PrivacyPolicyButton()
        denyButton.setTitle("PrivacyPolicy.DeclineButton.Title".localized.uppercased(), for: .normal)
        denyButton.addTarget(self, action: #selector(denyButtonTapped), for: .touchUpInside)
        denyButton.accessibilityIdentifier = "declinePrivacyButton"
        return denyButton
    }()

    lazy var acceptButton: PrivacyPolicyButton = {
        let acceptButton = PrivacyPolicyButton()
        acceptButton.backgroundColor = UIColor(red: 0.196, green: 0.204, blue: 0.361, alpha: 1)
        acceptButton.setTitleColor(.white, for: .normal)
        acceptButton.setTitle("PrivacyPolicy.AcceptButton.Title".localized.uppercased(), for: .normal)
        acceptButton.addTarget(self, action: #selector(acceptButtonTapped), for: .touchUpInside)
        acceptButton.accessibilityIdentifier = "acceptPrivacyButton"
        return acceptButton
    }()

    lazy var buttonsStackView: UIStackView = {
        let buttonsStackView = UIStackView()
        buttonsStackView.translatesAutoresizingMaskIntoConstraints = false
...
