...
            }
            item.button.setStyle(isEnabled ? .allowed : .base, animated: false)
            item.button.allowTitle = "Onboarding.Permissions.AllowButton.Title".localized
            item.button.allowedTitle = "Onboarding.Permissions.AlreadyAllowedButton.Title".localized
            item.button.allowAccessibilityLabel = "Onboarding.Permissions.AllowButton.LocationAccessibilityLabel".localized
            item.button.allowedAccessibilityLabel = "Onboarding.Permissions.AlreadyAllowedButton.LocationAccessibilityLabel".localized
            item.button.allowAccessibilityIdentifier = "permissionsLocationButtonAllow"
            item.button.allowedAccessibilityIdentifier = "permissionsLocationButtonAllowed"

            return item
        }()
        addConstraints(on: location, stackView: stackView)

...

            item.button.setStyle(isEnabled ? .allowed : .base, animated: false)
            item.button.allowTitle = "Onboarding.Permissions.AllowButton.Title".localized
            item.button.allowedTitle = "Onboarding.Permissions.AlreadyAllowedButton.Title".localized
            item.button.allowAccessibilityLabel = "Onboarding.Permissions.AllowButton.NotificationsAccessibilityLabel".localized
            item.button.allowedAccessibilityLabel = "Onboarding.Permissions.AlreadyAllowedButton.NotificationsAccessibilityLabel".localized
            item.button.allowAccessibilityIdentifier = "permissionsNotificationsButtonAllow"
            item.button.allowedAccessibilityIdentifier = "permissionsNotificationsButtonAllowed"

            return item
        }()
        addConstraints(on: notifications, stackView: stackView)
    }
...
