...
        button.setContentCompressionResistancePriority(.required, for: .horizontal)
        button.setContentCompressionResistancePriority(.required, for: .vertical)
        button.accessibilityIdentifier = "settingsLogoutButton"
        return button
    }()

    lazy var privacyButton: MultilineButton = {
        let button = MultilineButton()
        button.translatesAutoresizingMaskIntoConstraints = false

        let attributes: [NSAttributedString.Key: Any] = [
            .font: UIFont.custom(.medium, size: 14, forTextStyle: .body),
            .foregroundColor: UIColor.appMainText,
...
