...

fileprivate enum Key: String, CaseIterable {
    case hasLaunchedApp = "hasLaunchedApp"
    case lastUploadKey = "lastUpload"
    case logToFileKey = "logToFile"
    case isTrackingEnabledKey = "isTrackingEnabled"
    case userKey = "user"
    case lastBLEUploadKey = "lastBLEUpload"
    case hasAcceptedPrivacyPolicyKey = "hasAcceptedPrivacyPolicy"
    case dateOfBirthKey = "dateOfBirth"
    case isDateOfBirthUploadedKey = "isDateOfBirthUploaded"
    case lastHeartbeatKey = "lastHeartbeatKey"
    case bleIdentifiers = "bleIdentifiers"
    case expiredBleIdentifiers = "expiredBleIdentifiers"
    case nextProvisioningAttempt = "nextProvisioningAttempt"
...
